# qa-portfolio

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.github/workflows/: api.yml  e2e.yml  performance.yml
api/: README.md  conftest.py  pyproject.toml
api/schemas/: __init__.py  auth.py  booking.py
api/tests/: test_auth.py  test_bookings_crud.py  test_bookings_filter.py  test_bookings_negative.py
e2e/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: auth.fixture.ts
e2e/page-objects/: cart.page.ts  checkout.page.ts  inventory.page.ts  login.page.ts
e2e/tests/: cart.spec.ts  checkout.spec.ts  inventory.spec.ts  login.spec.ts  visual.spec.ts
performance/: README.md
performance/scripts/: baseline.js  spike.js  stress.js
