[project]
name = "qa-portfolio-api-tests"
version = "0.1.0"
requires-python = ">=3.11"  # tested on 3.14
dependencies = [
    "httpx==0.27.0",
    "pytest==8.2.0",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest-cov==5.0.0",
    "genbadge[coverage]==1.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
